syntax = "proto3";

package blobcast.storage.v1;

option go_package = "github.com/forma-dev/blobcast/pkg/proto/blobcast/storage/v1";

import "blobcast/primitives/v1/blob_identifier.proto";

message ChunkReference {
  blobcast.primitives.v1.BlobIdentifier id = 1;
  bytes chunk_hash = 2;
}
